--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <p style="color: #f2f2f2;">پشتیبانی ایتا و روبیکا: @seventeam</p>
   </div>
 
-  <h1>خرید vpn</h1>
+<a href="https://github.com/v2rayngvpn/vpn" rel="dofollow"><h1>خرید vpn</h1></a>
   <p>بهترین روش برای تغییر ایپی دستگاه خرید vpn می باشد که می توانید آن را از تیم سون خریداری کنید.</p>
   <br>
   <h2>با تهیه وی پی ان آیپی دستگاه خود را تغییر دهید!</h2>
